--- a/simple-scroll/index.html
+++ b/simple-scroll/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Parallax Scrolling effect</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <div id="parallax"><h2>Div 1</h2></div>
-        <div><h2>Div 2</h2></div>
-        <div><h2>Div 3</h2></div>
-        <div><h2>Div 4</h2></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+		/>
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>Parallax: BG Scrolling effect</title>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<section class="section-1">
+			<h2>Section 1</h2>
+		</section>
+		<section class="section-2">
+			<h2>Section 2</h2>
+		</section>
+		<!-- <section class="section-3">
+			<h2>Section 3</h2>
+		</section>
+		<section class="section-4">
+			<h2>Section 4</h2>
+		</section> -->
 
-        <script src="main.js"></script>
-    </body>
+		<script src="main.js"></script>
+	</body>
 </html>
